[package]
name = "grammar"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
regex = "1.11.1"
url = "2.5.2"
winnow = { version = "0.6.20", features = ["simd"] }

[[example]]
name = "nginx_log_next"
test = true
